feat: ability to set cal-map

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -579,6 +579,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "f544fac9-66b0-4d1f-aed5-6a09c7039e55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from getdist import loadMCSamples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "aa21e83a-a5a1-40eb-8773-6a1eefa2bd0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc = loadMCSamples(\"outputs/alan_cal/c06_w05_cf06_wf05_smooth32_tns0500_ign[()]_sim[('open', 'short')]_s11()_antsim-False/bayescal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ae6b9709-aa18-4eb2-901b-10caffe5185e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.48568777e+03, -1.94939214e+02,  6.26715323e+01, -1.80869024e+01,\n",
+       "        6.81609361e+00, -3.97353404e+00,  2.21080954e+02, -7.42656882e+03,\n",
+       "        9.45888006e+02,  1.83825042e+02, -2.95395613e+00,  1.23818111e+00,\n",
+       "       -4.37734247e-01,  3.20364022e-01, -9.41614501e+00, -3.68996434e+00,\n",
+       "       -7.33847561e+00,  4.52332298e+00, -2.70827414e+00,  1.06372786e+01,\n",
+       "        8.71699654e+00, -3.51410698e+00, -1.51593435e+00,  5.99461861e-01,\n",
+       "        3.01547952e+02, -3.70706096e-02, -4.40981039e-03,  1.87267770e-02,\n",
+       "        2.50895707e-02, -5.04465716e-03,  9.45888006e+02])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc.samples[np.argmin(mc.loglikes)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7b3b4d6d-0792-45b9-8bca-8afc07d056c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1a7bee41-70fd-40de-af36-bb33dbd6aa4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1485.69356198 -194.9322685    62.68934773  -18.13497693    6.80042823\n",
+      "   -3.94115456]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"outputs/alan_cal/c06_w05_cf06_wf05_smooth32_tns0500_ign[()]_sim[('open', 'short')]_s11()_antsim-False/bayescal.map\", 'rb') as fl:\n",
+    "    print(pickle.load(fl)['optres'].x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1584a878-b514-4b64-91b1-943e9309e378",
    "metadata": {},
